--- a/atv-avaliativa/style.css
+++ b/atv-avaliativa/style.css
@@ -152,7 +152,8 @@ a:hover{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 1vh;
+    gap: 1.5rem;
+    font-size: 3;
 }
 
 .wrap-divs-contact{
