--- a/atv-avaliativa/style.css
+++ b/atv-avaliativa/style.css
@@ -99,7 +99,7 @@ a:hover{
 }
 .img-01{
     position: absolute;
-    left: -50px;
+    left: 0px;
     width: auto;
     height: 500px;
     transition: all 400ms linear;
@@ -109,25 +109,92 @@ a:hover{
     transform: scale(1.2);
     transition: all 400ms linear;
 }
-.profile02{
+/* .profile02{
+    display:flex ;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 50px;
     width: 100%;
-    height: 500px;
-    background-color: yellow;
-    padding-top: 30px;
-
+    height:auto;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    background-color: #ffffff;
 }
+
+.rel-2{
+    position: relative;
+    width: 500px;
+    height: 500px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    border-radius: 100%;
+    overflow: hidden;
+    left: 600px;
+}
+
+.img-02{
+    position: absolute;
+    left: 0px;
+    width: auto;
+    height: 500px;
+    transition: all 400ms linear;
+}
+
+.img-02:hover{
+    cursor: pointer;
+    transform: scale(1.2);
+    transition: all 400ms linear;
+}
+
+ .nome-p2{
+    font-size: 3.2rem;
+    color: #2f384e;
+    padding-right: 1200px;
+}
+/*
+.p-p2{
+    font-size: 1.6rem;
+    color: #373f53;
+    line-height: 40px;
+} */
+
+/* .left-profile02{
+    width:600px;
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: right; 
+    gap: 30px;
+    padding-right: -1200px;
+}
+
+.right-profile1{
+    width:600px;
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: right;
+    gap: 30px;
+} */
+
 .tec{
     width: 100%;
     height: auto;
-    background-color: grey;
-    padding-top: 30px;
+    background-color: white;
+    padding-top: 100px;
     padding-bottom: 30px;
     gap: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
 
+.tec h1{
+    height: 80px;
 }
 .contact{
     width: 100%;
@@ -140,19 +207,22 @@ a:hover{
 }
 
 .flex-cards{
+    padding: 0px;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
     width: 100%;
+    gap: 2rem;
 }
 
 .card{
+    padding: 40px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 1.5rem;
+    gap: 1rem;
     font-size: 3;
 }
 
