--- a/restaurante/menu/style.css
+++ b/restaurante/menu/style.css
@@ -1,9 +1,10 @@
-*{
+* {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
-body{
+body {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -13,9 +14,10 @@ body{
     background-size: cover;
     height: 100vh;
     overflow: hidden;
+    font-family: "Kanit", sans-serif;
 }
 
-.wrap-everything{
+.wrap-everything {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -23,105 +25,96 @@ body{
     gap: 4vh;
 }
 
-.wrap-img{
+.wrap-img {
     animation: fromTop 2s linear;
-   
 }
 
+.img-style {
+    opacity: 0.8;
+    border-radius: 50%;
+    box-shadow: 0 35px 35px rgba(0, 0, 0, 0.25), 0 -10px 25px rgba(0, 0, 0, 0.12), 0 4px 6px rgba(0, 0, 0, 0.12), 0 10px 11px rgba(0, 0, 0, 0.17), 0 -3px 5px rgba(0, 0, 0, 0.09);
+}
+
+.wrap-p {
+    text-align: center;
+    width: 100%;
+}
+
+p {
+    color: #ffffff;
+    font-size: 3.5rem;
+    text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.3);
+    transition: all 200ms linear;
+    animation: show 2s linear;
+    font-weight: 900;
+    letter-spacing: 5px;
+}
+
+@media (min-width: 1024px) {
+    body {
+        background-image: url("../assets/fundo-browser.jpg");
+    }
+
+    .img-style {
+        width: 400px;
+        height: 400px;
+    }
+
+    p {
+        font-size: 8rem;
+        filter: blur(1px);
+        transition: all 200ms linear;
+        text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.9);
+    }
+
+    p:hover {
+        filter: blur(0px);
+        cursor: pointer;
+        transition: all 200ms linear;
+    }
+}
+
+/* Animations */
 @keyframes fromTop {
-    0%{
+    0% {
         opacity: 0.1;
         transform: translateY(-200px);
     }
-    100%{
+    100% {
         opacity: 0.8;
         transform: translateY(0px);
     }
 }
 
-.img-style{
-    opacity: 0.8;
-    border-radius: 100%;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-}
-
-.wrap-p{
-    text-align: center;
-    width: 100%;
-}
-
-p{
-    color: #ffff;
-    font-family: "Kanit", sans-serif;
-    font-size: 3.5rem;
-    text-shadow: 10px 10px 10px rgba(0,0,0,0.3);
-    transition: all 200ms linear;
-    animation: show 2s linear;
-    font-weight: 900;
-    letter-spacing: 10px;
-}
-
 @keyframes show {
-    from{
+    from {
         transform: translateY(200px);
         opacity: 0.1;
     }
-    to{
+    to {
         transform: translateY(0px);
         opacity: 1;
     }
 }
 
-.right-animation{
-    animation: left 2s linear;
-}
-
-.left-animation{
-    animation: right 2s linear;
-}
-
 @keyframes right {
-    from{
+    from {
         transform: translateX(-500px);
         opacity: 0.1;
     }
-    to{
+    to {
         transform: translateX(0px);
         opacity: 1;
-
     }
 }
+
 @keyframes left {
-    from{
+    from {
         transform: translateX(500px);
         opacity: 0.1;
     }
-    to{
+    to {
         transform: translateX(0px);
         opacity: 1;
-
-    }
-}
-
-@media (width >= 1024px){
-    body{
-        background-image: url("../assets/fundo-browser.jpg");
-    }
-    .img-style{
-        width: 400px;
-        height: 400px;
-    }
-    p{
-        font-size: 8rem;
-        filter: blur(1px);
-        transition: all 200ms linear;
-    text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.9);
-
-    }
-    p:hover{
-        filter: blur(0px);
-        cursor: pointer;
-        transition: all 200ms linear;
-
     }
 }
